Add high-level wrapper client
