# kiota/models/delete_aip_request.go
@@ -1,0 +1,170 @@
+// Code generated by Microsoft Kiota - DO NOT EDIT.
+// Changes may cause incorrect behavior and will be lost if the code is regenerated.
+
+package models
+
+import (
+    i878a80d2330e89d26896388a3f487eef27b0a0e6c010c493bf80be1452208f91 "github.com/microsoft/kiota-abstractions-go/serialization"
+)
+
+type DeleteAipRequest struct {
+    // Stores additional data not described in the OpenAPI description found when deserializing. Can be used for serialization as well.
+    additionalData map[string]any
+    // Explanation recorded with the deletion request.
+    event_reason *string
+    // UUID of the pipeline creating the deletion request.
+    pipeline *string
+    // Email address of the user creating the deletion request.
+    user_email *string
+    // Identifier of the user creating the deletion request.
+    user_id *int32
+}
+// NewDeleteAipRequest instantiates a new DeleteAipRequest and sets the default values.
+func NewDeleteAipRequest()(*DeleteAipRequest) {
+    m := &DeleteAipRequest{
+    }
+    m.SetAdditionalData(make(map[string]any))
+    return m
+}
+// CreateDeleteAipRequestFromDiscriminatorValue creates a new instance of the appropriate class based on discriminator value
+// returns a Parsable when successful
+func CreateDeleteAipRequestFromDiscriminatorValue(parseNode i878a80d2330e89d26896388a3f487eef27b0a0e6c010c493bf80be1452208f91.ParseNode)(i878a80d2330e89d26896388a3f487eef27b0a0e6c010c493bf80be1452208f91.Parsable, error) {
+    return NewDeleteAipRequest(), nil
+}
+// GetAdditionalData gets the AdditionalData property value. Stores additional data not described in the OpenAPI description found when deserializing. Can be used for serialization as well.
+// returns a map[string]any when successful
+func (m *DeleteAipRequest) GetAdditionalData()(map[string]any) {
+    return m.additionalData
+}
+// GetEventReason gets the event_reason property value. Explanation recorded with the deletion request.
+// returns a *string when successful
+func (m *DeleteAipRequest) GetEventReason()(*string) {
+    return m.event_reason
+}
+// GetFieldDeserializers the deserialization information for the current model
+// returns a map[string]func(i878a80d2330e89d26896388a3f487eef27b0a0e6c010c493bf80be1452208f91.ParseNode)(error) when successful
+func (m *DeleteAipRequest) GetFieldDeserializers()(map[string]func(i878a80d2330e89d26896388a3f487eef27b0a0e6c010c493bf80be1452208f91.ParseNode)(error)) {
+    res := make(map[string]func(i878a80d2330e89d26896388a3f487eef27b0a0e6c010c493bf80be1452208f91.ParseNode)(error))
+    res["event_reason"] = func (n i878a80d2330e89d26896388a3f487eef27b0a0e6c010c493bf80be1452208f91.ParseNode) error {
+        val, err := n.GetStringValue()
+        if err != nil {
+            return err
+        }
+        if val != nil {
+            m.SetEventReason(val)
+        }
+        return nil
+    }
+    res["pipeline"] = func (n i878a80d2330e89d26896388a3f487eef27b0a0e6c010c493bf80be1452208f91.ParseNode) error {
+        val, err := n.GetStringValue()
+        if err != nil {
+            return err
+        }
+        if val != nil {
+            m.SetPipeline(val)
+        }
+        return nil
+    }
+    res["user_email"] = func (n i878a80d2330e89d26896388a3f487eef27b0a0e6c010c493bf80be1452208f91.ParseNode) error {
+        val, err := n.GetStringValue()
+        if err != nil {
+            return err
+        }
+        if val != nil {
+            m.SetUserEmail(val)
+        }
+        return nil
+    }
+    res["user_id"] = func (n i878a80d2330e89d26896388a3f487eef27b0a0e6c010c493bf80be1452208f91.ParseNode) error {
+        val, err := n.GetInt32Value()
+        if err != nil {
+            return err
+        }
+        if val != nil {
+            m.SetUserId(val)
+        }
+        return nil
+    }
+    return res
+}
+// GetPipeline gets the pipeline property value. UUID of the pipeline creating the deletion request.
+// returns a *string when successful
+func (m *DeleteAipRequest) GetPipeline()(*string) {
+    return m.pipeline
+}
+// GetUserEmail gets the user_email property value. Email address of the user creating the deletion request.
+// returns a *string when successful
+func (m *DeleteAipRequest) GetUserEmail()(*string) {
+    return m.user_email
+}
+// GetUserId gets the user_id property value. Identifier of the user creating the deletion request.
+// returns a *int32 when successful
+func (m *DeleteAipRequest) GetUserId()(*int32) {
+    return m.user_id
+}
+// Serialize serializes information the current object
+func (m *DeleteAipRequest) Serialize(writer i878a80d2330e89d26896388a3f487eef27b0a0e6c010c493bf80be1452208f91.SerializationWriter)(error) {
+    {
+        err := writer.WriteStringValue("event_reason", m.GetEventReason())
+        if err != nil {
+            return err
+        }
+    }
+    {
+        err := writer.WriteStringValue("pipeline", m.GetPipeline())
+        if err != nil {
+            return err
+        }
+    }
+    {
+        err := writer.WriteStringValue("user_email", m.GetUserEmail())
+        if err != nil {
+            return err
+        }
+    }
+    {
+        err := writer.WriteInt32Value("user_id", m.GetUserId())
+        if err != nil {
+            return err
+        }
+    }
+    {
+        err := writer.WriteAdditionalData(m.GetAdditionalData())
+        if err != nil {
+            return err
+        }
+    }
+    return nil
+}
+// SetAdditionalData sets the AdditionalData property value. Stores additional data not described in the OpenAPI description found when deserializing. Can be used for serialization as well.
+func (m *DeleteAipRequest) SetAdditionalData(value map[string]any)() {
+    m.additionalData = value
+}
+// SetEventReason sets the event_reason property value. Explanation recorded with the deletion request.
+func (m *DeleteAipRequest) SetEventReason(value *string)() {
+    m.event_reason = value
+}
+// SetPipeline sets the pipeline property value. UUID of the pipeline creating the deletion request.
+func (m *DeleteAipRequest) SetPipeline(value *string)() {
+    m.pipeline = value
+}
+// SetUserEmail sets the user_email property value. Email address of the user creating the deletion request.
+func (m *DeleteAipRequest) SetUserEmail(value *string)() {
+    m.user_email = value
+}
+// SetUserId sets the user_id property value. Identifier of the user creating the deletion request.
+func (m *DeleteAipRequest) SetUserId(value *int32)() {
+    m.user_id = value
+}
+type DeleteAipRequestable interface {
+    i878a80d2330e89d26896388a3f487eef27b0a0e6c010c493bf80be1452208f91.AdditionalDataHolder
+    i878a80d2330e89d26896388a3f487eef27b0a0e6c010c493bf80be1452208f91.Parsable
+    GetEventReason()(*string)
+    GetPipeline()(*string)
+    GetUserEmail()(*string)
+    GetUserId()(*int32)
+    SetEventReason(value *string)()
+    SetPipeline(value *string)()
+    SetUserEmail(value *string)()
+    SetUserId(value *int32)()
+}
